log
Sat 06 May 2023 03:42:59 AM UTC: 
 sudoku.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|5
total_score: 0/70
19d9530
Sat 06 May 2023 03:50:11 AM UTC: 
 sudoku.c | 63 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 63 insertions(+)
 tests:  6|2
total_score: 45/70
1ba4907
Sun 07 May 2023 04:11:10 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  7|1
total_score: 55/70
becb331
Sun 07 May 2023 04:33:49 AM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:22: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  138 |       Node* n = stack->data;
      |                      ^~
sudoku.c:148:24: error: void value not ignored as it ought to be
  148 |       while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                        ^
Compilation failed
282d572
Sun 07 May 2023 04:35:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:22: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  138 |       Node* n = stack->last->data;
      |                      ^~
sudoku.c:148:24: error: void value not ignored as it ought to be
  148 |       while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                        ^
Compilation failed
f6e1906
Sun 07 May 2023 04:35:37 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:22: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  138 |       Node* n = stack->first->data;
      |                      ^~
sudoku.c:148:24: error: void value not ignored as it ought to be
  148 |       while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                        ^
Compilation failed
f4ac526
Sun 07 May 2023 04:35:43 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:22: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  138 |       Node* n = stack->first;
      |                      ^~
sudoku.c:148:24: error: void value not ignored as it ought to be
  148 |       while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                        ^
Compilation failed
4e9509a
Sun 07 May 2023 04:35:48 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:22: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  138 |       Node* n = stack->last;
      |                      ^~
sudoku.c:148:24: error: void value not ignored as it ought to be
  148 |       while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                        ^
Compilation failed
9a02a76
Sun 07 May 2023 04:37:56 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:138:33: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  138 |       Node* n = createNode(stack->last->data);
      |                                 ^~
sudoku.c:148:24: error: void value not ignored as it ought to be
  148 |       while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                        ^
Compilation failed
22cd799
Sun 07 May 2023 04:39:00 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:139:14: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  139 |     n = stack->last->data;
      |              ^~
sudoku.c:148:22: error: void value not ignored as it ought to be
  148 |     while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                      ^
Compilation failed
a97f2e1
Sun 07 May 2023 04:40:19 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:139:14: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  139 |     n = stack->last;
      |              ^~
sudoku.c:148:22: error: void value not ignored as it ought to be
  148 |     while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                      ^
Compilation failed
6252c10
Sun 07 May 2023 04:42:55 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c:9:2: error: conflicting types for ‘Node’; have ‘struct <anonymous>’
    9 | }Node;
      |  ^~~~
sudoku.c:5:21: note: previous declaration of ‘Node’ with type ‘Node’
    5 | typedef struct Node Node;
      |                     ^~~~
sudoku.c: In function ‘DFS’:
sudoku.c:140:14: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  140 |     n = stack->last;
      |              ^~
sudoku.c:149:22: error: void value not ignored as it ought to be
  149 |     while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                      ^
Compilation failed
4704fdd
Sun 07 May 2023 04:42:59 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:139:14: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  139 |     n = stack->last;
      |              ^~
sudoku.c:148:22: error: void value not ignored as it ought to be
  148 |     while ((adj_node = popFront(adj_nodes)) != NULL) {
      |                      ^
Compilation failed
acc48c1
Sun 07 May 2023 04:43:13 AM UTC: 
 sudoku.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  7|1
total_score: 55/70
328d993
Sun 07 May 2023 05:06:30 AM UTC: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:144:9: error: unknown type name ‘node’; did you mean ‘Node’?
  144 |         node* current = adj_nodes->first;
      |         ^~~~
      |         Node
sudoku.c:144:34: error: invalid use of incomplete typedef ‘List’
  144 |         node* current = adj_nodes->first;
      |                                  ^~
sudoku.c:146:28: error: request for member ‘data’ in something not a structure or union
  146 |             push(S, current->data);
      |                            ^~
sudoku.c:147:13: error: unknown type name ‘node’; did you mean ‘Node’?
  147 |             node* temp = current;
      |             ^~~~
      |             Node
sudoku.c:148:30: error: request for member ‘next’ in something not a structure or union
  148 |             current = current->next;
      |                              ^~
Compilation failed
736dcb3
Sun 07 May 2023 05:06:50 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:144:34: error: invalid use of incomplete typedef ‘List’
  144 |         Node* current = adj_nodes->first;
      |                                  ^~
sudoku.c:146:28: error: ‘Node’ has no member named ‘data’
  146 |             push(S, current->data);
      |                            ^~
sudoku.c:148:30: error: ‘Node’ has no member named ‘next’
  148 |             current = current->next;
      |                              ^~
Compilation failed
97a4e02
